--- a/app/css/common.css
+++ b/app/css/common.css
@@ -39,7 +39,7 @@ Styles
 .w-50 {
   width: 50%; }
 
-.cubicTransition, a, .btn {
+.cubicTransition {
   transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
   -webkit-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
   -moz-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -63,7 +63,8 @@ h3, .h3 {
 .txt {
   font-size: 14px;
   color: #32325D;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  line-height: 100%; }
   .txt.bigger {
     font-size: 16px; }
 
@@ -73,30 +74,31 @@ h3, .h3 {
 .white {
   color: #F9F9F9; }
 
-a {
+a, button {
   display: block;
   text-decoration: none;
   color: #32325D;
   opacity: 1;
   line-height: 100%;
   box-shadow: none !important; }
-  a:hover {
+  a:hover, button:hover {
     opacity: 0.5;
     color: #32325D; }
 
 .btn {
   background-color: #FF0956;
-  padding: 10px 20px;
+  padding: 10px 40px;
   color: #F9F9F9;
   border: 1px solid #FF0956;
   font-size: 14px;
   border-radius: 7px;
-  box-shadow: none !important; }
+  box-shadow: none !important;
+  line-height: 100%; }
   .btn:hover {
     color: #F9F9F9; }
 
 .grey-box {
-  padding: 20px;
+  padding: 26px 20px;
   background-color: rgba(50, 50, 93, 0.03);
   border-radius: 7px;
   position: relative; }
@@ -150,7 +152,8 @@ ul {
 .form-control, .form-select {
   border: none;
   border-radius: 7px;
-  line-height: 2rem; }
+  line-height: 2rem;
+  box-shadow: none !important; }
 
 .ar .grey-box .close {
   right: inherit;
