--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2,7 +2,7 @@
 Fonts
 ----------------------------------------------------- */
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&family=Dosis:wght@400;500;700&display=swap");
-.font-dosis-regular {
+.font-dosis-regular, header .dropdown-toggle .txt span {
   font-family: 'Dosis', sans-serif;
   font-weight: 400; }
 
@@ -39,7 +39,7 @@ Styles
 .w-50 {
   width: 50%; }
 
-.cubicTransition, a, .btn, header .dropdown-toggle, header .dropdown-toggle::after {
+.cubicTransition {
   transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
   -webkit-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
   -moz-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -63,7 +63,8 @@ h3, .h3 {
 .txt {
   font-size: 14px;
   color: #32325D;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  line-height: 100%; }
   .txt.bigger {
     font-size: 16px; }
 
@@ -73,30 +74,31 @@ h3, .h3 {
 .white {
   color: #F9F9F9; }
 
-a {
+a, button {
   display: block;
   text-decoration: none;
   color: #32325D;
   opacity: 1;
   line-height: 100%;
   box-shadow: none !important; }
-  a:hover {
+  a:hover, button:hover {
     opacity: 0.5;
     color: #32325D; }
 
 .btn {
   background-color: #FF0956;
-  padding: 10px 20px;
+  padding: 10px 40px;
   color: #F9F9F9;
   border: 1px solid #FF0956;
   font-size: 14px;
   border-radius: 7px;
-  box-shadow: none !important; }
+  box-shadow: none !important;
+  line-height: 100%; }
   .btn:hover {
     color: #F9F9F9; }
 
 .grey-box {
-  padding: 20px;
+  padding: 26px 20px;
   background-color: rgba(50, 50, 93, 0.03);
   border-radius: 7px;
   position: relative; }
@@ -150,7 +152,8 @@ ul {
 .form-control, .form-select {
   border: none;
   border-radius: 7px;
-  line-height: 2rem; }
+  line-height: 2rem;
+  box-shadow: none !important; }
 
 .ar .grey-box .close {
   right: inherit;
@@ -168,7 +171,7 @@ header {
     header .notification.new-notification:after {
       content: '';
       position: absolute;
-      top: 25%;
+      top: 10%;
       right: 0;
       width: 7px;
       height: 7px;
@@ -232,17 +235,11 @@ footer {
     font-size: 10px; }
 
 .fit-height {
-  height: calc(100vh - 256px); }
+  min-height: calc(100vh - 256px); }
 
 .content-wrapper {
   position: relative;
   width: 100%; }
-  .content-wrapper .vertical-center-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%); }
 
 .steps-list {
   height: 120px; }
@@ -258,13 +255,13 @@ footer {
       left: 0;
       transform: translateY(-50%);
       width: 100%;
-      opacity: 0.5; }
+      opacity: 0.15; }
       .steps-list li .steps-list-content .h3 {
         color: #32325D; }
     .steps-list li .number {
       position: absolute;
       font-size: 120px;
-      color: #F9F9F9;
+      color: #32325D;
       opacity: .08;
       top: -10px;
       right: 0; }
@@ -285,6 +282,8 @@ footer {
     .steps-list li.active, .steps-list li.done {
       background-color: #32325D; }
       .steps-list li.active .steps-list-content .h3, .steps-list li.done .steps-list-content .h3 {
+        color: #F9F9F9; }
+      .steps-list li.active .number, .steps-list li.done .number {
         color: #F9F9F9; }
       .steps-list li.active .icon-white, .steps-list li.done .icon-white {
         display: block; }
@@ -307,7 +306,7 @@ footer {
   position: relative;
   width: 38px;
   height: 38px;
-  opacity: .7; }
+  opacity: .25; }
   .add-new-icon img {
     width: 100%;
     height: 100%;
