--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -36,8 +36,8 @@ Colors
 /* -----------------------------------------------------
 Styles
 ----------------------------------------------------- */
-.w-50 {
-  width: 50%; }
+.w-50-fit {
+  width: calc(50% - 4px); }
 
 .cubicTransition {
   transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -67,12 +67,17 @@ h3, .h3 {
   line-height: 100%; }
   .txt.bigger {
     font-size: 16px; }
+  .txt.small {
+    font-size: 12px; }
 
 .uppercase {
   text-transform: uppercase; }
 
 .white {
   color: #F9F9F9; }
+
+.pink {
+  color: #FF0956; }
 
 a, button {
   display: block;
@@ -96,23 +101,29 @@ a, button {
   line-height: 100%; }
   .btn:hover {
     color: #F9F9F9; }
+  .btn.add-new-btn {
+    background-color: rgba(50, 50, 93, 0.03);
+    padding: 34px 112px;
+    color: #32325D;
+    border-style: dashed; }
 
 .grey-box {
   padding: 26px 20px;
   background-color: rgba(50, 50, 93, 0.03);
   border-radius: 7px;
   position: relative; }
-  .grey-box .close {
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    right: 10px;
-    top: 10px;
-    opacity: .7; }
-    .grey-box .close img {
-      display: block;
-      width: 100%;
-      height: 100%; }
+
+.close {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  right: 10px;
+  top: 10px;
+  opacity: .7; }
+  .close img {
+    display: block;
+    width: 100%;
+    height: 100%; }
 
 .dropdown-toggle {
   border: none;
@@ -156,9 +167,22 @@ ul {
   box-shadow: none !important;
   padding: 15px; }
 
+.input-group-text {
+  background-color: rgba(50, 50, 93, 0.03);
+  border: none;
+  border-radius: 7px; }
+
+.modal-backdrop {
+  background-color: #32325D;
+  opacity: 0.65; }
+
 .ar .grey-box .close {
   right: inherit;
   left: 10px; }
+
+@media (max-width: 575.98px) {
+  .btn.add-new-btn {
+    padding: 28px 100px; } }
 
 header {
   padding: 20px 0;
@@ -323,6 +347,15 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain; }
+
+.modal .modal-content {
+  padding: 30px 64px;
+  border: none;
+  border-radius: 14px;
+  background-color: #F9F9F9; }
+  .modal .modal-content .close {
+    top: 30px;
+    right: 30px; }
 
 @media (max-width: 575.98px) {
   .steps-list {
