--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -46,8 +46,8 @@ $primary-color-white: #F9F9F9;
 Styles
 ----------------------------------------------------- */
 
-.w-50{
-    width: 50%;
+.w-50-fit{
+    width: calc(50% - 4px);
 }
 .cubicTransition{
     transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -88,12 +88,18 @@ h3, .h3{
     &.bigger{
         font-size: 16px;
     }
+    &.small{
+        font-size: 12px;
+    }
 }
 .uppercase{
     text-transform: uppercase;
 }
 .white{
     color: $primary-color-white;
+}
+.pink{
+    color: $primary-color-pink;
 }
 a, button{
     display: block;
@@ -124,24 +130,30 @@ a, button{
         //background-color: transparent;
         //color: $primary-color-pink;
     }
+    &.add-new-btn{
+        background-color: rgba($color: $primary-color-navy, $alpha: 0.03);
+        padding: 34px 112px;
+        color: $primary-color-navy;
+        border-style: dashed;
+    }
 }
 .grey-box{
     padding: 26px 20px;
     background-color: rgba($color: $primary-color-navy, $alpha: 0.03);
     border-radius: 7px;
     position: relative;
-    .close{
-        position: absolute;
-        width: 12px;
-        height: 12px;
-        right: 10px;
-        top: 10px;
-        opacity: .7;
-        img{
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
+}
+.close{
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    right: 10px;
+    top: 10px;
+    opacity: .7;
+    img{
+        display: block;
+        width: 100%;
+        height: 100%;
     }
 }
 .dropdown-toggle{
@@ -192,6 +204,15 @@ ul{
     box-shadow: none !important;
     padding: 15px;
 }
+.input-group-text{
+    background-color: rgba($color: $primary-color-navy, $alpha: 0.03);
+    border: none;
+    border-radius: 7px;
+}
+.modal-backdrop{
+    background-color: $primary-color-navy;
+    opacity: 0.65;
+}
 
 
 .ar{
@@ -199,6 +220,15 @@ ul{
         .close{
             right: inherit;
             left: 10px;
+        }
+    }
+}
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px){
+    .btn{
+        &.add-new-btn{
+            padding: 28px 100px;
         }
     }
 }
