--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -18,7 +18,7 @@ Fonts
   font-family: 'Barlow', sans-serif;
   font-weight: 400; }
 
-.font-barlow-medium, .btn {
+.font-barlow-medium, .txt.medium, .btn {
   font-family: 'Barlow', sans-serif;
   font-weight: 500; }
 
@@ -38,6 +38,33 @@ Styles
 ----------------------------------------------------- */
 .w-50-fit {
   width: calc(50% - 4px); }
+
+.w-10 {
+  width: calc( 10% - 3px);
+  display: inline-block; }
+
+.w-20 {
+  width: calc( 20% - 3px);
+  display: inline-block; }
+
+.w-30 {
+  width: calc( 30% - 3px);
+  display: inline-block; }
+
+.w-70 {
+  width: calc( 70% - 3px);
+  display: inline-block; }
+
+.w-80 {
+  width: calc( 80% - 3px);
+  display: inline-block; }
+
+.w-90 {
+  width: calc( 90% - 3px);
+  display: inline-block; }
+
+.p-relative {
+  position: relative; }
 
 .cubicTransition {
   transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -72,6 +99,9 @@ h3, .h3 {
 
 .uppercase {
   text-transform: uppercase; }
+
+.underline {
+  text-decoration: underline; }
 
 .white {
   color: #F9F9F9; }
@@ -175,6 +205,10 @@ ul {
 .modal-backdrop {
   background-color: #32325D;
   opacity: 0.65; }
+
+.input-group-text, .form-control {
+  background-color: transparent;
+  padding: 0; }
 
 .ar .grey-box .close {
   right: inherit;
@@ -356,6 +390,11 @@ footer {
   .modal .modal-content .close {
     top: 30px;
     right: 30px; }
+
+.eye-slash {
+  position: absolute;
+  top: 50%;
+  right: 0; }
 
 @media (max-width: 575.98px) {
   .steps-list {
