--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -49,6 +49,33 @@ Styles
 .w-50-fit{
     width: calc(50% - 4px);
 }
+.w-10{
+    width: calc( 10% - 3px);
+    display: inline-block;
+}
+.w-20{
+    width: calc( 20% - 3px);
+    display: inline-block;
+}
+.w-30{
+    width: calc( 30% - 3px);
+    display: inline-block;
+}
+.w-70{
+    width: calc( 70% - 3px);
+    display: inline-block;
+}
+.w-80{
+    width: calc( 80% - 3px);
+    display: inline-block;
+}
+.w-90{
+    width: calc( 90% - 3px);
+    display: inline-block;
+}
+.p-relative{
+    position: relative;
+}
 .cubicTransition{
     transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
     -webkit-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -91,9 +118,15 @@ h3, .h3{
     &.small{
         font-size: 12px;
     }
+    &.medium{
+        @extend.font-barlow-medium;
+    }
 }
 .uppercase{
     text-transform: uppercase;
+}
+.underline{
+    text-decoration: underline;
 }
 .white{
     color: $primary-color-white;
@@ -213,7 +246,10 @@ ul{
     background-color: $primary-color-navy;
     opacity: 0.65;
 }
-
+.input-group-text, .form-control{
+    background-color: transparent;
+    padding: 0;
+}
 
 .ar{
     .grey-box{
