--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -251,8 +251,11 @@ ul{
     opacity: 0.65;
 }
 .input-group-text, .form-control{
-    background-color: transparent;
-    padding: 0;
+    //background-color: transparent;
+    //padding: 0;
+    &.grey-box{
+        background-color: $primary-color-white;
+    }
 }
 
 .grey-box{
@@ -276,6 +279,46 @@ ul{
                 opacity: 1;
             }
         }
+    }
+}
+
+.filter-swiper{
+    &.swiper-container {
+        width: 100%;
+        height: 100%;
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        width: auto;
+        height: auto;
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+.dropdown-menu{
+    li{
+        width: 100%;
     }
 }
 .ar{
